bug (app-details.component.scss) fix build layout bug

--- a/cmd/ui/assets/src/app/features/app-store/app-details/app-details.component.scss
+++ b/cmd/ui/assets/src/app/features/app-store/app-details/app-details.component.scss
@@ -2,7 +2,7 @@
   display: flex;
 
   .left {
-    max-width: 70%;
+    width: 70%;
   }
 }
 
